* 2013-11-26 - thorben.betten@open-xchange.com

 - Fix for bug 29914: Cleansed all duplicate log4j occurrences from runtime system

* 2013-11-25 - steffen.templin@open-xchange.com

 - Fix for Bug 29967: Use proper credentials when accessing an external transport account

* 2013-11-24 - thorben.betten@open-xchange.com

 - Fix for bug 29823: Delegate acquiring stream from part to thread pool if possible
 - Fix for bug 29846: Enforce serial execution of modifying actions related to database entities/modules

* 2013-11-22 - thorben.betten@open-xchange.com

 - Fix for bug 29854: orderly signal OAuth provider error to client
 - Fix for bug 29860: Tolerate non-deletable file from file storage on user delete attempt
 - Fix for bug 29925: Propagate proper event in case auto-login is turned off and short-term session container elapsed

* 2013-11-22- tobias.friedrich@open-xchange.com

 - Fix for bug 29904: Validate numerical identifiers for infostore file metadata 

* 2013-11-21 - thorben.betten@open-xchange.com

 - Fix for bug 29816: Handle possible 'javax.net.ssl.SSLHandshakeException' that indicates SMTP cannot be accessed with a secure connection.
                      Return an appropriate error message to the user and beg him to change SMTP configuration accordingly.
 - Fix for bug 29071: Properly query preview/resource cache when accessing published images

* 2013-11-21 - marcus.klein@open-xchange.com

 - Fix for bug 26354: Use storage methods that to not rely on cached user attributes causing wrong attributes to be saved.

* 2013-11-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 29855: Order EDIT-actions based on new directory version 

* 2013-11-19 - marc.arens@open-xchange.com

 - Fix for bug 29851: Keep Stanza to send proper client acks before recasting for local/remote delivery
 
* 2013-11-19 - thorben.betten@open-xchange.com

 - Fix for bug 29438: Deal with changing User-Agent identifier when Apple Media Player jumps in