@@ -63,6 +63,7 @@ import com.openexchange.drive.events.DriveEventPublisher;
 import com.openexchange.drive.events.subscribe.DriveSubscriptionStore;
 import com.openexchange.drive.events.subscribe.Subscription;
 import com.openexchange.exception.OXException;
+import com.openexchange.java.Strings;
 
 /**
  * {@link GCMDriveEventPublisher}
@@ -97,6 +98,7 @@ public class GCMDriveEventPublisher implements DriveEventPublisher {
             LOG.error("unable to get subscriptions for service " + SERIVCE_ID, e);
         }
         if (null != subscriptions && 0 < subscriptions.size()) {
+            String pushToken = event.getPushToken();
             for (int i = 0; i < subscriptions.size(); i += MULTICAST_LIMIT) {
                 /*
                  * prepare chunk
@@ -104,7 +106,12 @@ public class GCMDriveEventPublisher implements DriveEventPublisher {
                 int length = Math.min(subscriptions.size(), i + MULTICAST_LIMIT) - i;
                 List<String> registrationIDs = new ArrayList<String>(length);
                 for (int j = 0; j < length; j++) {
-                    registrationIDs.add(subscriptions.get(i + j).getToken());
+                    Subscription subscription = subscriptions.get(i + j);
+                    if (false == Strings.isEmpty(pushToken) && pushToken.equals(subscription.getToken())) {
+                        LOG.trace("Skipping push notification for subscription: " + subscription);
+                        continue;
+                    }
+                    registrationIDs.add(subscription.getToken());
                 }
                 /*
                  * send chunk
