@@ -73,6 +73,7 @@ public class DriveEventImpl implements DriveEvent {
     private final int contextID;
     private final Set<String> folderIDs;
     private final boolean remote;
+    private final String pushToken;
 
     /**
      * Initializes a new {@link DriveEventImpl}.
@@ -81,12 +82,14 @@ public class DriveEventImpl implements DriveEvent {
      * @param folderIDs The affected folder IDs
      * @param actions The client actions to execute
      * @param remote <code>true</code> it this event is 'remote', <code>false</code>, otherwise
+     * @param pushToken The push token of the device causing the event, or <code>null</code> if not applicable
      */
-    public DriveEventImpl(int contextID, Set<String> folderIDs, boolean remote) {
+    public DriveEventImpl(int contextID, Set<String> folderIDs, boolean remote, String pushToken) {
         super();
         this.contextID = contextID;
         this.folderIDs = folderIDs;
         this.remote = remote;
+        this.pushToken = pushToken;
     }
 
     @Override
@@ -110,8 +113,13 @@ public class DriveEventImpl implements DriveEvent {
     }
 
     @Override
+    public String getPushToken() {
+        return pushToken;
+    }
+
+    @Override
     public String toString() {
-        return "DriveEvent [remote=" + remote + ", contextID=" + contextID + ", folderIDs=" + folderIDs + "]";
+        return "DriveEvent [remote=" + remote + ", contextID=" + contextID + ", folderIDs=" + folderIDs + ", pushToken=" + pushToken + "]";
     }
 
     @Override
@@ -120,6 +128,7 @@ public class DriveEventImpl implements DriveEvent {
         int result = 1;
         result = prime * result + contextID;
         result = prime * result + ((folderIDs == null) ? 0 : folderIDs.hashCode());
+        result = prime * result + ((pushToken == null) ? 0 : pushToken.hashCode());
         result = prime * result + (remote ? 1231 : 1237);
         return result;
     }
@@ -144,6 +153,13 @@ public class DriveEventImpl implements DriveEvent {
                 return false;
             }
         } else if (!folderIDs.equals(other.folderIDs)) {
+            return false;
+        }
+        if (pushToken == null) {
+            if (other.pushToken != null) {
+                return false;
+            }
+        } else if (!pushToken.equals(other.pushToken)) {
             return false;
         }
         if (remote != other.remote) {
